@@ -1,7 +1,7 @@
 {
     "name": "fbit/fbit-recordlistux",
     "type": "typo3-cms-extension",
-    "version": "1.4.0",
+    "version": "1.5.0",
     "require": {
         "typo3/cms-core": "^9"
     },
